# EDEN-OS

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
config/: default.yaml  eden_protocol.yaml
config/hardware_profiles/: cpu_edge.yaml  h100_cinematic.yaml  l4_cloud.yaml  rtx3090_standard.yaml  rtx4090_production.yaml
eden_os/animator/: __init__.py  animator_engine.py  audio_to_keypoints.py  eden_temporal_anchor.py  idle_generator.py  liveportrait_driver.py  state_machine.py
eden_os/brain/: __init__.py  brain_engine.py  memory_manager.py  persona_manager.py  reasoning_engine.py  streaming_bridge.py  template_loader.py
eden_os/conductor/: __init__.py  error_recovery.py  latency_enforcer.py  metrics_collector.py  orchestrator.py  session_manager.py
eden_os/gateway/: __init__.py  api_server.py  audio_capture.py  video_encoder.py  webrtc_handler.py  websocket_handler.py
eden_os/genesis/: __init__.py  eden_protocol_validator.py  latent_encoder.py  portrait_engine.py  preload_cache.py  skin_realism_agent.py
eden_os/scholar/: __init__.py  audiobook_ingestor.py  knowledge_graph.py  media_analyzer.py  rag_retriever.py  (+2 more)
scripts/: save_versioned.sh  setup_models.py  validate_gpu.py
static/: index.html
templates/: _template_schema.yaml  ai_tutor.yaml  customer_support.yaml  default.yaml  fitness_coach.yaml  medical_office.yaml  podcast_host.yaml  sales_dev_rep.yaml
tests/: conftest.py  test_chat_video_realism.py  test_e2e_realism.py  test_visual_realism.py  test_vocal_realism.py
(+10 files in other folders)
